# home-assistant-server

./: .env.example  .gitignore  README.md  pyproject.toml
config/: home-control.example.yaml
docs/: dify-openapi.yaml  home-assistant-scripts.example.yaml
src/home_control_bridge/: __init__.py  app.py  audit.py  config.py  faults.py  home_assistant.py  main.py  schemas.py  udp_events.py
tests/: test_bridge.py
